# rpath_tutorial

./: LICENSE  README.md  build.sh  cleanup.sh  run.sh
cmake_modules/: FindFASTMATRIX.cmake  FindMYMATHS.cmake
libfastmatrix/: CMakeLists.txt  conanfile.py  fastmatrix.cpp  fastmatrix.h
libmymaths/: CMakeLists.txt  conanfile.py  mymaths.cpp  mymaths.h
simpleapp/: CMakeLists.txt  conanfile.py  simpleapp.cpp
